[gd_scene load_steps=5 format=3 uid="uid://dub1xjsu4aicf"]

[ext_resource type="Texture2D" uid="uid://b477pd6r07cw8" path="res://letters/sprites/letters_alphabet.png" id="1_obbom"]
[ext_resource type="Script" path="res://letters/letter_sprite/letter_sprite.gd" id="2_lkj42"]
[ext_resource type="Texture2D" uid="uid://8pwd1puvppkv" path="res://letters/sprites/hand.png" id="3_7r8d8"]
[ext_resource type="Texture2D" uid="uid://l3teu51rx8ki" path="res://letters/sprites/letters_eyes.png" id="4_j4xut"]

[node name="letter_sprite" type="Sprite2D"]
texture = ExtResource("1_obbom")
hframes = 26
script = ExtResource("2_lkj42")

[node name="hand" type="Sprite2D" parent="."]
visible = false
position = Vector2(-14, 4)
texture = ExtResource("3_7r8d8")

[node name="eye_sprite" type="Sprite2D" parent="."]
texture = ExtResource("4_j4xut")
hframes = 7
frame = 5

[node name="sprite_animation_timer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="shake_timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="sprite_animation_timer" to="." method="_on_sprite_animation_timer_timeout"]
[connection signal="timeout" from="shake_timer" to="." method="_on_shake_timer_timeout"]
